trunk/yanl/examples/t1/fail/simbol_nedefinit.yanl
# Un simbol nu poate fi folosit fara a fi definit

program dude;
var a:integer;

function f(z:integer):integer
begin
  f:=b+1;
end;

begin
  writeinteger(20);
end.